# tally-copilot

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  complete_architecture.md  railway.toml
backend/: .dockerignore  Dockerfile  auth.py  database.py  main.py  models.py  requirements.txt
backend/adapters/email/: inmemory.py  resend.py
backend/adapters/llm/: _utils.py  anthropic.py  gemini.py  openai_compatible.py
backend/adapters/messenger/: inmemory.py  meta_cloud_api.py
backend/adapters/object_store/: local_fs.py  s3_compatible.py
backend/infra/: catalog.py  crypto.py  registry.py  router.py  seed.py  telemetry.py
backend/ports/: email.py  llm.py  messenger.py  object_store.py
backend/routes/: actions.py  auth.py  documents.py  infra.py  installer.py  mock.py  onboarding.py  settings.py  tally_connector.py  whatsapp.py
backend/services/: email_sender.py  extractor.py  pipeline.py  validator.py  whatsapp_sender.py
backend/static/connector/: connector.py  tally_xml.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: MockPanel.jsx  ProtectedRoute.jsx  StatusBadge.jsx
frontend/src/pages/: ActionDetail.jsx  Dashboard.jsx  ForgotPassword.jsx  Infrastructure.jsx  Landing.jsx  Login.jsx  Onboarding.jsx  ResetPassword.jsx  Settings.jsx  Signup.jsx
tally-connector/: .env.example  connector.py  connector_state.json  install.sh  pyproject.toml  tally_xml.py
